add TODO for logistic regression model

--- a/trash.tex
+++ b/trash.tex
@@ -120,6 +120,9 @@
 %\end{definition}
 \end{abstract} 
 
+\section{TODO: Review logistic regression MODEL}
+
+
 \section{Logistic Regression for Classification}\label{section-logisticRegression}
 
 This model is named as a \textit{regression} model but is actually used for \textit{classification} and this convention has been made this way for historical reasons.
